# onii-chan

./: .env.example  .gitignore  README.md  docker-compose.yaml
Open-LLM-VTuber/: ..env.un~  .gitignore  Dockerfile.monitor  conf.yaml  docker-compose.yaml  dockerfile  main.py  model_dict.json  requirements.txt  server.py
Open-LLM-VTuber/config_alts/: model1.yaml  model3.yaml  model4.yaml
Open-LLM-VTuber/event_monitor/: monitor.py
Open-LLM-VTuber/llm/: hfendpoint.py  hfllama.py  llm_factory.py
Open-LLM-VTuber/prompts/: crypto_reactions.py  intent_classifier.py  ir_reactions.py
Open-LLM-VTuber/prompts/persona/: oniichan.txt  picklerick.txt
Open-LLM-VTuber/services/event-monitor/: Dockerfile  monitor.py
Open-LLM-VTuber/tts/: elevenlabs_tts.py  tts_factory.py
backend/createListener/: main.py  pyproject.toml
event-monitor/: .Dockerfile.un~  .env  .env.sample  .monitor.py.un~  .requirements.txt.un~  Dockerfile  graph_monitor.py  monitor.py  requirements.txt
frontend/: Dockerfile  cloudbuild.yaml  next.config.ts  package-lock.json  package.json
frontend/src/: abi.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/provider/: provider.tsx  wagmi.ts  (+1 more)
listener/: abi.json  config.yaml  main.py  pyproject.toml  requirements.txt
onii-contracts/: hardhat.config.ts  package-lock.json  package.json
onii-contracts/contracts/: OniiNFT.sol
subgraph/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: OniiNFT.json
subgraph/src/: onii-nft.ts
subgraph/tests/: onii-nft-utils.ts  onii-nft.test.ts
(+12 files in other folders)
